[gd_scene load_steps=21 format=4 uid="uid://cy4g8o8gnifo0"]

[ext_resource type="Script" uid="uid://dn3xhixj770o0" path="res://Scenes/Arena/arena.gd" id="1_6o3nl"]
[ext_resource type="TileSet" uid="uid://c1jgtklhf5663" path="res://Scenes/Arena/tile_set.tres" id="1_b8w6q"]
[ext_resource type="Script" uid="uid://cn3qboeoanrk7" path="res://Custom_nodes/play_area.gd" id="3_11not"]
[ext_resource type="PackedScene" uid="uid://coras6tgh04h5" path="res://Scenes/Unit/unit.tscn" id="4_rm3sm"]
[ext_resource type="Script" uid="uid://bcful8v6mbard" path="res://Custom_nodes/unit_grid.gd" id="4_t7yvt"]
[ext_resource type="Script" uid="uid://dxo8nc2san2a6" path="res://Components/valid_tiles_highlighter.gd" id="6_fsjwy"]
[ext_resource type="Script" uid="uid://bt3yv83xd01q5" path="res://Components/tile_highlighter.gd" id="6_qnyor"]
[ext_resource type="Resource" uid="uid://xc2wwbeifw3u" path="res://Data/Units/frod.tres" id="8_0ibrr"]
[ext_resource type="Script" uid="uid://bphpuyrtltmeu" path="res://Custom_nodes/unit_mover.gd" id="8_fsjwy"]
[ext_resource type="Resource" uid="uid://d1pplv4esnoo6" path="res://Data/Units/hale.tres" id="9_87vak"]
[ext_resource type="Script" uid="uid://1hdkoag76lib" path="res://Custom_nodes/unit_navigation_debug.gd" id="10_d81lm"]
[ext_resource type="Resource" uid="uid://cim8of57c1lr2" path="res://Data/game_state/game_state.tres" id="11_87vak"]
[ext_resource type="PackedScene" uid="uid://bsuv6scjti73j" path="res://Scenes/Shop/shop.tscn" id="11_xt8pn"]
[ext_resource type="Script" uid="uid://cin6la2gclbur" path="res://Custom_nodes/item_mover.gd" id="12_nmnh2"]
[ext_resource type="Script" uid="uid://cydad8buxkt4k" path="res://Custom_nodes/battle_handler.gd" id="14_lrmtw"]
[ext_resource type="Script" uid="uid://cqjp40bq6soqc" path="res://Custom_nodes/item_spawner.gd" id="14_vgng5"]
[ext_resource type="Script" uid="uid://bgluqq6gaukyq" path="res://Components/scene_spawner.gd" id="15_dd8dv"]
[ext_resource type="PackedScene" uid="uid://cujwt4r8u836w" path="res://Scenes/start_battle_button/start_battle_button.tscn" id="15_vgng5"]
[ext_resource type="PackedScene" uid="uid://nmagwgfq5sh6" path="res://Scenes/battle_unit/battle_unit.tscn" id="16_d81lm"]
[ext_resource type="Resource" uid="uid://cfihuefg1m0o2" path="res://Data/Player/player_stats.tres" id="16_wbi20"]

[node name="Arena" type="Node2D"]
script = ExtResource("1_6o3nl")
metadata/_edit_lock_ = true

[node name="Visuals" type="Node2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Background" type="TileMapLayer" parent="Visuals"]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAYAAAAAAAEAAgAAAAYAAAAAAAIAAgAAAAYAAAAAAAMAAgAAAAYAAAAAAAQAAgAAAAYAAAAAAAUAAgAAAAYAAAAAAAYAAgAAAAYAAAAAAAcAAgAAAAYAAAAAAAgAAgAAAAYAAAAAAAkAAgAAAAYAAAAAAAoAAgAAAAYAAAABAAAAAgAAAAYAAAABAAEAAgAAAAYAAAABAAIAAgAAAAYAAAABAAMAAgAAAAYAAAABAAQAAgAAAAYAAAABAAUAAgAAAAYAAAABAAYAAgAAAAYAAAABAAcAAgAAAAYAAAABAAgAAgAAAAYAAAABAAkAAgAAAAYAAAABAAoAAgAAAAYAAAACAAAAAgAAAAYAAAACAAEAAgAAAAYAAAACAAIAAgAAAAYAAAACAAMAAgAAAAYAAAACAAQAAgAAAAYAAAACAAUAAgAAAAYAAAACAAYAAgAAAAYAAAACAAcAAgAAAAYAAAACAAgAAgAAAAYAAAACAAkAAgAAAAYAAAACAAoAAgAAAAYAAAADAAAAAgAAAAYAAAADAAEAAgAAAAYAAAADAAIAAgAAAAYAAAADAAMAAgAAAAYAAAADAAQAAgAAAAYAAAADAAUAAgAAAAYAAAADAAYAAgAAAAYAAAADAAcAAgAAAAYAAAADAAgAAgAAAAYAAAADAAkAAgAAAAYAAAADAAoAAgAAAAYAAAAEAAAAAgAAAAYAAAAEAAEAAgAAAAYAAAAEAAIAAgAAAAYAAAAEAAMAAgAAAAYAAAAEAAQAAgAAAAYAAAAEAAUAAgAAAAYAAAAEAAYAAgAAAAYAAAAEAAcAAgAAAAYAAAAEAAgAAgAAAAYAAAAEAAkAAgAAAAYAAAAEAAoAAgAAAAYAAAAFAAAAAgAAAAYAAAAFAAEAAgAAAAYAAAAFAAIAAgAAAAYAAAAFAAMAAgAAAAYAAAAFAAQAAgAAAAYAAAAFAAUAAgAAAAYAAAAFAAYAAgAAAAYAAAAFAAcAAgAAAAYAAAAFAAgAAgAAAAYAAAAFAAkAAgAAAAYAAAAFAAoAAgAAAAYAAAAGAAAAAgAAAAYAAAAGAAEAAgAAAAYAAAAGAAIAAgAAAAYAAAAGAAMAAgAAAAYAAAAGAAQAAgAAAAYAAAAGAAUAAgAAAAYAAAAGAAYAAgAAAAYAAAAGAAcAAgAAAAYAAAAGAAgAAgAAAAYAAAAGAAkAAgAAAAYAAAAGAAoAAgAAAAYAAAAHAAAAAgAAAAYAAAAHAAEAAgAAAAYAAAAHAAIAAgAAAAYAAAAHAAMAAgAAAAYAAAAHAAQAAgAAAAYAAAAHAAUAAgAAAAYAAAAHAAYAAgAAAAYAAAAHAAcAAgAAAAYAAAAHAAgAAgAAAAYAAAAHAAkAAgAAAAYAAAAHAAoAAgAAAAYAAAAIAAAAAgAAAAYAAAAIAAEAAgAAAAYAAAAIAAIAAgAAAAYAAAAIAAMAAgAAAAYAAAAIAAQAAgAAAAYAAAAIAAUAAgAAAAYAAAAIAAYAAgAAAAYAAAAIAAcAAgAAAAYAAAAIAAgAAgAAAAYAAAAIAAkAAgAAAAYAAAAIAAoAAgAAAAYAAAAJAAAAAgAAAAYAAAAJAAEAAgAAAAYAAAAJAAIAAgAAAAYAAAAJAAMAAgAAAAYAAAAJAAQAAgAAAAYAAAAJAAUAAgAAAAYAAAAJAAYAAgAAAAYAAAAJAAcAAgAAAAYAAAAJAAgAAgAAAAYAAAAJAAkAAgAAAAYAAAAJAAoAAgAAAAYAAAAKAAAAAgAAAAYAAAAKAAEAAgAAAAYAAAAKAAIAAgAAAAYAAAAKAAMAAgAAAAYAAAAKAAQAAgAAAAYAAAAKAAUAAgAAAAYAAAAKAAYAAgAAAAYAAAAKAAcAAgAAAAYAAAAKAAgAAgAAAAYAAAAKAAkAAgAAAAYAAAAKAAoAAgAAAAYAAAALAAAAAgAAAAYAAAALAAEAAgAAAAYAAAALAAIAAgAAAAYAAAALAAMAAgAAAAYAAAALAAQAAgAAAAYAAAALAAUAAgAAAAYAAAALAAYAAgAAAAYAAAALAAcAAgAAAAYAAAALAAgAAgAAAAYAAAALAAkAAgAAAAYAAAALAAoAAgAAAAYAAAAMAAAAAgAAAAYAAAAMAAEAAgAAAAYAAAAMAAIAAgAAAAYAAAAMAAMAAgAAAAYAAAAMAAQAAgAAAAYAAAAMAAUAAgAAAAYAAAAMAAYAAgAAAAYAAAAMAAcAAgAAAAYAAAAMAAgAAgAAAAYAAAAMAAkAAgAAAAYAAAAMAAoAAgAAAAYAAAANAAAAAgAAAAYAAAANAAEAAgAAAAYAAAANAAIAAgAAAAYAAAANAAMAAgAAAAYAAAANAAQAAgAAAAYAAAANAAUAAgAAAAYAAAANAAYAAgAAAAYAAAANAAcAAgAAAAYAAAANAAgAAgAAAAYAAAANAAkAAgAAAAYAAAANAAoAAgAAAAYAAAAOAAAAAgAAAAYAAAAOAAEAAgAAAAYAAAAOAAIAAgAAAAYAAAAOAAMAAgAAAAYAAAAOAAQAAgAAAAYAAAAOAAUAAgAAAAYAAAAOAAYAAgAAAAYAAAAOAAcAAgAAAAYAAAAOAAgAAgAAAAYAAAAOAAkAAgAAAAYAAAAOAAoAAgAAAAYAAAAPAAAAAgAAAAYAAAAPAAEAAgAAAAYAAAAPAAIAAgAAAAYAAAAPAAMAAgAAAAYAAAAPAAQAAgAAAAYAAAAPAAUAAgAAAAYAAAAPAAYAAgAAAAYAAAAPAAcAAgAAAAYAAAAPAAgAAgAAAAYAAAAPAAkAAgAAAAYAAAAPAAoAAgAAAAYAAAAQAAAAAgAAAAYAAAAQAAEAAgAAAAYAAAAQAAIAAgAAAAYAAAAQAAMAAgAAAAYAAAAQAAQAAgAAAAYAAAAQAAUAAgAAAAYAAAAQAAYAAgAAAAYAAAAQAAcAAgAAAAYAAAAQAAgAAgAAAAYAAAAQAAkAAgAAAAYAAAAQAAoAAgAAAAYAAAARAAAAAgAAAAYAAAARAAEAAgAAAAYAAAARAAIAAgAAAAYAAAARAAMAAgAAAAYAAAARAAQAAgAAAAYAAAARAAUAAgAAAAYAAAARAAYAAgAAAAYAAAARAAcAAgAAAAYAAAARAAgAAgAAAAYAAAARAAkAAgAAAAYAAAARAAoAAgAAAAYAAAASAAAAAgAAAAYAAAASAAEAAgAAAAYAAAASAAIAAgAAAAYAAAASAAMAAgAAAAYAAAASAAQAAgAAAAYAAAASAAUAAgAAAAYAAAASAAYAAgAAAAYAAAASAAcAAgAAAAYAAAASAAgAAgAAAAYAAAASAAkAAgAAAAYAAAASAAoAAgAAAAYAAAATAAAAAgAAAAYAAAATAAEAAgAAAAYAAAATAAIAAgAAAAYAAAATAAMAAgAAAAYAAAATAAQAAgAAAAYAAAATAAUAAgAAAAYAAAATAAYAAgAAAAYAAAATAAcAAgAAAAYAAAATAAgAAgAAAAYAAAATAAkAAgAAAAYAAAATAAoAAgAAAAYAAAAAAAsAAgAAAAYAAAABAAsAAgAAAAYAAAACAAsAAgAAAAYAAAADAAsAAgAAAAYAAAAEAAsAAgAAAAYAAAAFAAsAAgAAAAYAAAAGAAsAAgAAAAYAAAAHAAsAAgAAAAYAAAAIAAsAAgAAAAYAAAAJAAsAAgAAAAYAAAAKAAsAAgAAAAYAAAALAAsAAgAAAAYAAAAMAAsAAgAAAAYAAAANAAsAAgAAAAYAAAAOAAsAAgAAAAYAAAAPAAsAAgAAAAYAAAAQAAsAAgAAAAYAAAARAAsAAgAAAAYAAAASAAsAAgAAAAYAAAATAAsAAgAAAAYAAAAUAAAAAgAAAAYAAAAUAAEAAgAAAAYAAAAUAAIAAgAAAAYAAAAUAAMAAgAAAAYAAAAUAAQAAgAAAAYAAAAUAAUAAgAAAAYAAAAUAAYAAgAAAAYAAAAUAAcAAgAAAAYAAAAUAAgAAgAAAAYAAAAUAAkAAgAAAAYAAAAUAAoAAgAAAAYAAAAUAAsAAgAAAAYAAAA=")
tile_set = ExtResource("1_b8w6q")

[node name="Props" type="TileMapLayer" parent="Visuals"]
modulate = Color(1, 1, 1, 0.392157)
tile_set = ExtResource("1_b8w6q")

[node name="Walls" type="TileMapLayer" parent="Visuals"]
tile_map_data = PackedByteArray("AAAOAAIAAgAAAAEAAAAOAAMAAgAAAAEAAAAOAAQAAgAAAAEAAAAOAAUAAgAAAAEAAAAOAAYAAgAAAAEAAAAHAAEAAgABAAEAAAAIAAEAAgABAAEAAAAJAAEAAgABAAEAAAAKAAEAAgABAAEAAAALAAEAAgABAAEAAAAMAAEAAgABAAEAAAANAAEAAgABAAEAAAAOAAEAAgAAAAEAAAAFAAEAAgAAAAEAAAAFAAIAAgAAAAEAAAAFAAMAAgAAAAEAAAAFAAQAAgAAAAEAAAAFAAUAAgAAAAEAAAAGAAEAAgABAAEAAAAFAAcAAgABAAEAAAAGAAcAAgABAAEAAAAHAAcAAgABAAEAAAAIAAcAAgABAAEAAAAJAAcAAgABAAEAAAAKAAcAAgABAAEAAAALAAcAAgABAAEAAAAMAAcAAgABAAEAAAANAAcAAgABAAEAAAAOAAcAAgABAAEAAAAFAAYAAgAAAAEAAAABAAEAAAABAAAAAFABAAIAAAABAAAAAFABAAMAAAABAAAAAFABAAQAAAABAAAAAFABAAUAAAABAAAAAFABAAYAAAABAAAAAFABAAcAAAABAAAAAFACAAEAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAADAAEAAAAAAAAAAAAOAAoAAAAAAAQAAAANAAoAAAAAAAQAAAAMAAoAAAAAAAQAAAALAAoAAAAAAAQAAAAKAAoAAAAAAAQAAAAJAAoAAAAAAAQAAAAIAAoAAAAAAAQAAAAHAAoAAAAAAAQAAAAGAAoAAAAAAAQAAAAFAAoAAAAAAAQAAAAOAAsAAAAAAAQAAAANAAsAAAAAAAQAAAAMAAsAAAAAAAQAAAALAAsAAAAAAAQAAAAKAAsAAAAAAAQAAAAJAAsAAAAAAAQAAAAIAAsAAAAAAAQAAAAHAAsAAAAAAAQAAAAGAAsAAAAAAAQAAAAFAAsAAAAAAAQAAAA=")
tile_set = ExtResource("1_b8w6q")

[node name="GameArea" type="TileMapLayer" parent="." node_paths=PackedStringArray("unit_grid", "tile_highlighter")]
position = Vector2(192, 64)
tile_map_data = PackedByteArray("AAAAAAAAAgAAAA0AAAAAAAEAAgACAA4AAAAAAAIAAgAAAA0AAAAAAAMAAgAAAA0AAAAAAAQAAgADAA0AAAABAAAAAgADAA0AAAABAAEAAgAAAA0AAAABAAIAAgAAAA0AAAABAAMAAgABAA4AAAABAAQAAgAAAA0AAAACAAAAAgAAAA0AAAACAAEAAgAAAA0AAAACAAIAAgABAA0AAAACAAMAAgAAAA0AAAACAAQAAgADAA4AAAADAAAAAgACAA4AAAADAAEAAgAAAA0AAAADAAIAAgAAAA0AAAADAAMAAgAAAA0AAAADAAQAAgAAAA0AAAAEAAAAAgAAAA0AAAAEAAEAAgABAA4AAAAEAAIAAgAAAA0AAAAEAAMAAgACAA4AAAAEAAQAAgAAAA0AAAAFAAAAAgAAAA0AAAAFAAEAAgAAAA0AAAAFAAIAAgAAAA0AAAAFAAMAAgAAAA0AAAAFAAQAAgAAAA0AAAAGAAAAAgAAAA0AAAAGAAEAAgAAAA0AAAAGAAIAAgAAAA0AAAAGAAMAAgADAA0AAAAGAAQAAgAAAA0AAAAHAAAAAgADAA4AAAAHAAEAAgAAAA0AAAAHAAIAAgADAA4AAAAHAAMAAgAAAA0AAAAHAAQAAgAAAA0AAAA=")
tile_set = ExtResource("1_b8w6q")
script = ExtResource("3_11not")
unit_grid = NodePath("ArenaUnitGrid")
tile_highlighter = NodePath("TileHighlighter")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Decor" type="TileMapLayer" parent="GameArea"]
modulate = Color(1, 1, 1, 0.392157)
tile_set = ExtResource("1_b8w6q")

[node name="Highlight" type="TileMapLayer" parent="GameArea"]
tile_set = ExtResource("1_b8w6q")

[node name="ArenaUnitGrid" type="Node2D" parent="GameArea"]
script = ExtResource("4_t7yvt")
size = Vector2i(4, 5)

[node name="BattleUnitGrid" type="Node2D" parent="GameArea"]
script = ExtResource("4_t7yvt")
size = Vector2i(8, 5)

[node name="TileHighlighter" type="Node" parent="GameArea" node_paths=PackedStringArray("play_area", "highlight_layer")]
script = ExtResource("6_qnyor")
enabled = false
play_area = NodePath("..")
highlight_layer = NodePath("../Highlight")
tile = Vector2i(3, 0)

[node name="Bench" type="TileMapLayer" parent="." node_paths=PackedStringArray("unit_grid", "tile_highlighter")]
position = Vector2(64, 64)
tile_map_data = PackedByteArray("AAAAAAQAAAAAAA8AAAAAAAMAAAAAAA8AAAAAAAIAAAAAAA8AAAAAAAEAAAAAAA8AAAABAAQAAAAAAA8AAAABAAMAAAAAAA8AAAABAAIAAAAAAA8AAAABAAEAAAAAAA8AAAAAAAAAAAAAAA8AAAABAAAAAAAAAA8AAAA=")
tile_set = ExtResource("1_b8w6q")
script = ExtResource("3_11not")
unit_grid = NodePath("BenchUnitGrid")
tile_highlighter = NodePath("TileHighlighter")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="BenchUnitGrid" type="Node2D" parent="Bench"]
script = ExtResource("4_t7yvt")
size = Vector2i(2, 5)

[node name="Highlight" type="TileMapLayer" parent="Bench"]
tile_set = ExtResource("1_b8w6q")

[node name="TileHighlighter" type="Node" parent="Bench" node_paths=PackedStringArray("play_area", "highlight_layer")]
script = ExtResource("6_qnyor")
enabled = false
play_area = NodePath("..")
highlight_layer = NodePath("../Highlight")
tile = Vector2i(3, 0)

[node name="Unit" parent="Bench" instance=ExtResource("4_rm3sm")]
position = Vector2(0, 64)

[node name="Unit2" parent="Bench" instance=ExtResource("4_rm3sm")]
stats = ExtResource("8_0ibrr")

[node name="Unit3" parent="Bench" instance=ExtResource("4_rm3sm")]
position = Vector2(32, 0)
stats = ExtResource("9_87vak")

[node name="Unit7" parent="Bench" instance=ExtResource("4_rm3sm")]
position = Vector2(0, 96)

[node name="Unit8" parent="Bench" instance=ExtResource("4_rm3sm")]
position = Vector2(32, 96)
stats = ExtResource("9_87vak")

[node name="Unit9" parent="Bench" instance=ExtResource("4_rm3sm")]
position = Vector2(0, 128)

[node name="Unit10" parent="Bench" instance=ExtResource("4_rm3sm")]
position = Vector2(32, 128)
stats = ExtResource("8_0ibrr")

[node name="Unit4" parent="Bench" instance=ExtResource("4_rm3sm")]
position = Vector2(0, 32)
stats = ExtResource("9_87vak")

[node name="Unit6" parent="Bench" instance=ExtResource("4_rm3sm")]
position = Vector2(32, 64)

[node name="Unit5" parent="Bench" instance=ExtResource("4_rm3sm")]
position = Vector2(32, 32)
stats = ExtResource("8_0ibrr")

[node name="ItemsBench" type="TileMapLayer" parent="." node_paths=PackedStringArray("unit_grid", "tile_highlighter")]
position = Vector2(160, 320)
tile_set = ExtResource("1_b8w6q")
script = ExtResource("3_11not")
unit_grid = NodePath("ItemsUnitGrid")
tile_highlighter = NodePath("TileHighlighter")
metadata/_custom_type_script = "uid://cn3qboeoanrk7"
metadata/_edit_lock_ = true

[node name="ItemsUnitGrid" type="Node2D" parent="ItemsBench"]
script = ExtResource("4_t7yvt")
size = Vector2i(10, 1)
metadata/_custom_type_script = "uid://bcful8v6mbard"

[node name="TileHighlighter" type="Node" parent="ItemsBench" node_paths=PackedStringArray("play_area", "highlight_layer")]
script = ExtResource("6_qnyor")
enabled = false
play_area = NodePath("..")
highlight_layer = NodePath("../Highlight")
tile = Vector2i(3, 0)

[node name="Highlight" type="TileMapLayer" parent="ItemsBench"]
tile_set = ExtResource("1_b8w6q")

[node name="UnitGroup" type="Node" parent="."]

[node name="GameAreaHighlight" type="TileMapLayer" parent="UnitGroup"]
modulate = Color(1, 1, 1, 0.156863)
position = Vector2(192, 64)
tile_set = ExtResource("1_b8w6q")
metadata/_edit_lock_ = true

[node name="BenchHighlight" type="TileMapLayer" parent="UnitGroup"]
modulate = Color(1, 1, 1, 0.156863)
position = Vector2(64, 64)
tile_set = ExtResource("1_b8w6q")
metadata/_edit_lock_ = true

[node name="ItemBenchHighlight" type="TileMapLayer" parent="UnitGroup"]
modulate = Color(1, 1, 1, 0.313726)
position = Vector2(160, 320)
tile_set = ExtResource("1_b8w6q")
metadata/_edit_lock_ = true

[node name="ValidTilesHighlighter" type="Node" parent="UnitGroup" node_paths=PackedStringArray("game_area", "bench", "item_bench", "game_area_highlight_layer", "bench_highlight_layer", "item_bench_highlight_layer")]
script = ExtResource("6_fsjwy")
game_area = NodePath("../../GameArea")
bench = NodePath("../../Bench")
item_bench = NodePath("../../ItemsBench")
game_area_highlight_layer = NodePath("../GameAreaHighlight")
bench_highlight_layer = NodePath("../BenchHighlight")
item_bench_highlight_layer = NodePath("../ItemBenchHighlight")
tile = Vector2i(3, 0)

[node name="UnitNavigationDebug" type="Node2D" parent="." node_paths=PackedStringArray("game_area")]
position = Vector2(192, 64)
script = ExtResource("10_d81lm")
color = Color(1, 0, 0, 0.498039)
path_colors = Array[Color]([Color(0.219608, 1, 0, 1), Color(0, 0, 1, 1), Color(0, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 0, 1, 1)])
game_area = NodePath("../GameArea")
metadata/_custom_type_script = "uid://1hdkoag76lib"
metadata/_edit_lock_ = true

[node name="UnitMover" type="Node" parent="." node_paths=PackedStringArray("play_areas")]
script = ExtResource("8_fsjwy")
play_areas = [NodePath("../GameArea"), NodePath("../Bench")]
game_state = ExtResource("11_87vak")

[node name="ItemMover" type="Node" parent="." node_paths=PackedStringArray("play_areas")]
script = ExtResource("12_nmnh2")
play_areas = [NodePath("../ItemsBench")]

[node name="ItemSpawner" type="Node" parent="." node_paths=PackedStringArray("item_bench")]
script = ExtResource("14_vgng5")
item_bench = NodePath("../ItemsBench")

[node name="BattleHandler" type="Node" parent="." node_paths=PackedStringArray("game_area", "game_area_unit_grid", "battle_unit_grid")]
script = ExtResource("14_lrmtw")
game_state = ExtResource("11_87vak")
game_area = NodePath("../GameArea")
game_area_unit_grid = NodePath("../GameArea/ArenaUnitGrid")
battle_unit_grid = NodePath("../GameArea/BattleUnitGrid")
metadata/_custom_type_script = "uid://cydad8buxkt4k"

[node name="SceneSpawner" type="Node" parent="BattleHandler"]
script = ExtResource("15_dd8dv")
scene = ExtResource("16_d81lm")
metadata/_custom_type_script = "uid://bgluqq6gaukyq"

[node name="UI" type="CanvasLayer" parent="."]

[node name="Shop" parent="UI" instance=ExtResource("11_xt8pn")]
unique_name_in_owner = true

[node name="StartBattleButton" parent="UI" node_paths=PackedStringArray("arena_grid") instance=ExtResource("15_vgng5")]
offset_left = 256.0
offset_top = 256.0
offset_right = 288.0
offset_bottom = 280.0
game_state = ExtResource("11_87vak")
player_stats = ExtResource("16_wbi20")
arena_grid = NodePath("../../GameArea/ArenaUnitGrid")
